Fixed a bug with the enable toggle.  Adding the perimeter and area question.

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,7 @@
+- Match the Fractions - Have pictures of fractions that then need to be connected to the correct fraction
+- Simplify Fractions - 4/6 => 2/3
+
+
 - Find Multiples
 - Fraction addition where the denominators don't match
 - LCM
