Moved all of the operations into constants.

--- a/todo.txt
+++ b/todo.txt
@@ -5,6 +5,10 @@
 Replace the ? to balance.  The question mark should actually be an empty square.
 
 
+- Arithmetic Pyramid
+  - Complete inverse mode
+
+
 - Multistep Algebra
 
 K + 5 = 9
